# portunus

./: .gitignore  CLAUDE.md  EXTENSIONS.md  README.md  bun.nix  config.example.toml  findings.json  flake.nix  index.html  package.json
.github/workflows/: release.yml
examples/extensions/cheatsh/: manifest.toml
examples/extensions/cheatsh/src/: lib.rs
examples/extensions/emoji/: Cargo.toml  README.md  manifest.toml
examples/extensions/emoji/src/: lib.rs
examples/extensions/gh/: manifest.toml
examples/extensions/gh/src/: api.rs  lib.rs  render.rs
extension-sdk/: Cargo.toml
extension-sdk/src/: lib.rs
packaging/aur/: PKGBUILD
packaging/nix/: package.nix  unwrapped.nix
src/: App.css  App.tsx  Settings.tsx  highlight.ts  icons.tsx  main.tsx  settings.css  theme.ts  themes.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.md
src-tauri/src/: cli.rs  cli_ext.rs  clipboard_ocr.rs  config.rs  content_index.rs  content_match.rs  default_config.toml  frecency.rs  ipc.rs  keybinds.rs  layer_shell.rs  lib.rs  main.rs  native_host.rs  office.rs  preview.rs  provider_reload.rs  runtime_assets.rs  util.rs  watcher.rs
src-tauri/src/extensions/: bus.rs  hostfns.rs  install.rs  kv.rs  logs.rs  manifest.rs  marketplace.rs  mod.rs  seen_actions.rs  trigger.rs
src-tauri/src/providers/: apps.rs  calc.rs  clipboard.rs  command.rs  content.rs  dict.rs  files.rs  marketplace.rs  mod.rs  recent.rs  timer.rs  wasm.rs
src/actions/: shortcut.ts
src/commands/: store.ts
src/components/: ActionPicker.tsx  AppPreview.tsx  ClipboardPreview.tsx  DictPreview.tsx  ExtensionFormModal.tsx  ExtensionPreview.tsx  FilePreview.tsx  FooterHints.tsx  PreviewPanel.tsx  QuickLook.tsx  ResultIcon.tsx  ResultsList.tsx  TimerPreviews.tsx
src/components/clipboard/: ClipboardMode.tsx
src/components/onboarding/: OnboardingWizard.tsx  onboarding.css
src/components/settings/: AppearanceSection.tsx  Badge.tsx  ClipboardSection.tsx  ContentSection.tsx  DebugSection.tsx  DictSection.tsx  DirRow.tsx  ExtensionsSection.tsx  FilesSection.tsx  FilterChips.tsx  FrecencySection.tsx  GeneralSection.tsx  Modal.tsx  NumberField.tsx  ProvidersSection.tsx  RankingSection.tsx  SearchSection.tsx  Select.tsx  SettingsCard.tsx  SettingsField.tsx  SortableList.tsx  TextInput.tsx  TickSlider.tsx  Toggle.tsx
src/components/settings/extensions/: BusDangerNotice.tsx  DangerConsentModal.tsx  DangerNotice.tsx  ExtCardTabs.tsx  ExtensionCard.tsx  ExtensionLogs.tsx  ExtensionSettingsForm.tsx  InstallExtensionDialog.tsx  NetworkDangerNotice.tsx  OverviewTab.tsx  PermissionChips.tsx  PermissionsTab.tsx  SecretSettingInput.tsx  SpawnDangerNotice.tsx  permGlyphs.tsx
src/components/settings/keybinds/: KeybindRow.tsx  KeybindsSection.tsx  ShortcutChip.tsx  ShortcutRecorder.tsx  conflicts.ts
src/components/settings/ranking/: CategoryList.tsx  RankingPlayground.tsx  WeightPicker.tsx  categories.ts
src/extensions/: meta.ts
src/hooks/: useTauriListener.ts
src/keybinds/: builtins.ts  chord.ts  store.ts
src/providers/: apps.tsx  calc.tsx  clipboard.tsx  command.tsx  dict.tsx  extension.tsx  files.tsx  index.ts  marketplace.tsx  registry.ts  timer.tsx
src/selection/: SelectionLayer.tsx  SelectionPopover.tsx  controller.ts  geometry.ts
templates/extension/: Cargo.toml.tmpl  README.md.tmpl  lib.rs.tmpl  manifest.toml.tmpl
