[package]
name = "portunus-ext-sdk"
version = "0.2.0"
edition = "2021"
description = "Wire types and guest helpers for Portunus extensions"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Guest-only (wasm) helpers; the Portunus host depends on this crate with
# default-features = false to get just the wire types.
extism-pdk = { version = "1", optional = true }

[features]
default = ["guest"]
guest = ["dep:extism-pdk"]
