[package]
name = "portunus"
version = "0.1.0"
license = "Apache-2.0"
description = "Application launcher and power-user search for Wayland"
authors = ["SzilBalazs"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "portunus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
walkdir = "2"
exp-rs = "0.2"
pdfium-render = { version = "0.8", features = ["image"] }
image = "0.25"
roxmltree = "0.20"
toml = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
leptess = "0.14"
notify-debouncer-full = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
extism = "1.30.0"
portunus-ext-sdk = { path = "../extension-sdk", default-features = false }
