[package]
name = "portunus"
version = "0.2.0"
license = "Apache-2.0"
description = "Application launcher and power-user search for Wayland"
authors = ["SzilBalazs"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "portunus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
lto = "thin"          # cross-crate inlining; "thin" keeps build time sane vs "fat"
codegen-units = 1     # better optimization at cost of slower compile

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo-matcher = "0.3"
walkdir = "2"
exp-rs = "0.2"
pdfium-render = { version = "0.8", features = ["image"] }
image = "0.25"
roxmltree = "0.20"
toml = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1"
leptess = "0.14"
notify-debouncer-full = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
extism = "1.30.0"
portunus-ext-sdk = { path = "../extension-sdk", default-features = false }
tokio = { version = "1", features = ["sync"] }   # oneshot reply for the pdfium worker (already in tree via tauri)

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"            # must match tao's gtk version (see Cargo.lock)
gtk-layer-shell = { version = "0.8", features = ["v0_6"] } # wlr-layer-shell overlay; v0_6 for set_keyboard_mode
